--- a/ChatServerCS/packages.config
+++ b/ChatServerCS/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.1.3" targetFramework="net46" />
+  <package id="Autofac.SignalR" version="3.0.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.4.1" targetFramework="net46" />
